--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,8 @@
 	<property name = "main.src.dir" value = "src"/>
 	<property name = "main.build.dir" value = "bin"/>
 	<property name = "test.src.dir" value = "test"/>
-	<property name = "test.build.dir" value="bin/temp"/>
+	<!-- Same to have the other class visible to test file -->
+	<property name = "test.build.dir" value="bin"/>
 
 	<path id="classpath.test">
 	    <pathelement location="libs/junit-4.12.jar"/>
@@ -29,6 +30,7 @@
 		<!-- <mkdir dir = "${build.dir}"/> -->
 		<javac srcdir="${main.src.dir}" destdir = "${main.build.dir}" source = "1.8" target = "1.8" debug = "true" deprecation = "false" optimize = "false" failonerror = "true" includeantruntime="false">
 			<classpath refid="classpath.main"/>
+
 			<!-- <src path = "${main.src.dir}"/> -->
 			<!-- <include name="Main.java"/>
 			<include name="Controller.java"/> -->
